# hassle-rs

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  build.rs  release.toml
.github/: dependabot.yml
.github/workflows/: ci.yaml  publish.yaml
examples/: copy-over-56.hlsl  copy-under-56.hlsl  exports.hlsl  file-ast.rs  include.hlsl  include.rs  intellisense-tu.rs  link-add.hlsl  link-main.hlsl  link.rs  reflection.hlsl  reflection.rs  spirv.rs  use-export.hlsl  validate-fake-signing.rs  validate.rs
src/: ffi.rs  ffi_enums.rs  lib.rs  os.rs  unknown.rs  utils.rs  wrapper.rs
src/dxil/: ffi.rs  mod.rs  utils.rs  wrapper.rs
src/fake_sign/: mod.rs  modified_md5.rs
src/intellisense/: ffi.rs  mod.rs  utils.rs  wrapper.rs
