[package]
name = "hassle-rs"
version = "0.10.0"
authors = ["Traverse-Research <support@traverseresearch.nl>"]
edition = "2018"
description = "HLSL compiler library, this crate provides an FFI layer and idiomatic rust wrappers for the new DXC hlsl compiler and validator."
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Traverse-Research/hassle-rs"
repository = "https://github.com/Traverse-Research/hassle-rs"
keywords = ["shader", "pipeline", "hlsl", "dxc", "intellisense"]
categories = ["rendering", "rendering::graphics-api"]
include = [
    "src/*.rs",
    "src/intellisense/*.rs",
    "src/fake_sign/*.rs",
    "Cargo.toml",
]
documentation = "https://docs.rs/hassle-rs"

[badges]
maintenance = { status = "actively-developed" }

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"

[dependencies]
libloading = "0.7.0"
com-rs = "0.2.1"
bitflags = "1.2.1"
widestring = "1.0.1"
thiserror = "1.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["wtypes", "oleauto", "combaseapi"] }

[target.'cfg(not(windows))'.dependencies]
libc = "0.2"

[dev-dependencies]
rspirv = "0.11"
