[package]
name = "hassle-rs"
version = "0.11.0"
authors = ["Traverse-Research <support@traverseresearch.nl>"]
edition = "2018"
description = "HLSL compiler library, this crate provides an FFI layer and idiomatic rust wrappers for the new DXC HLSL compiler and validator."
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Traverse-Research/hassle-rs"
repository = "https://github.com/Traverse-Research/hassle-rs"
keywords = ["shader", "pipeline", "hlsl", "dxc", "intellisense"]
categories = ["rendering", "rendering::graphics-api"]
include = ["src", "LICENSE"]
documentation = "https://docs.rs/hassle-rs"

[dependencies]
bitflags = "2"
com = { version = "0.6", features = ["production"] }
# libloading 0.8 switches from `winapi` to `windows-sys`; permit either
libloading = ">=0.7,<0.9"
thiserror = "1.0.2"
widestring = "1"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["wtypes", "oleauto", "combaseapi"] }

[target.'cfg(not(windows))'.dependencies]
libc = "0.2"

[dev-dependencies]
rspirv = "0.11"
